--- a/crates/nu-polars/Cargo.toml
+++ b/crates/nu-polars/Cargo.toml
@@ -50,7 +50,7 @@ polars = { version = "0.25.0", features = [
 	"strings",
 	"strings",
 	"to_dummies",
-]}
+], optional = true}
 
 # Potential dependencies for extras
 alphanumeric-sort = "1.4.4"
@@ -117,3 +117,6 @@ reedline = { version = "0.14.0", features = ["bashisms", "sqlite"]}
 wax = { version =  "0.5.0" }
 rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }
 sqlparser = { version = "0.23.0", features = ["serde"] }
+
+[features]
+dataframe = ["polars"]
